tests/fixtures/invalid/pow_dict_float.py
# Cannot call pow() with Dict[str, int], Float
x = pow({"a": 1}, 1.0)
